Fixed image overlapping on mobile

--- a/client/src/components/Projects/ProjectItem/ProjectItem.scss
+++ b/client/src/components/Projects/ProjectItem/ProjectItem.scss
@@ -1,18 +1,20 @@
 .project-item {
     position: relative;
-    min-width: 350px;
-    height: 250px;
+    width: 450px;
     overflow: hidden;
     cursor: pointer;
     opacity: 0;
 
     animation: show 500ms forwards ease-out;
 
-    img {
-        transform: scale(1);
-        opacity: 0;
-        animation: show 2s forwards ease-in-out;
-        transition: all 0.2s;
+    .project-image {
+        img {
+            width: 100%;
+            transform: scale(1);
+            opacity: 0;
+            animation: show 2s forwards ease-in-out;
+            transition: all 0.2s;
+        }
     }
 
     &-overlay {
